# receipt-extractor

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/receipt_extractor/: main.py
src/receipt_extractor/api/: app.py
src/receipt_extractor/api/router/: receipt_processing.py
src/receipt_extractor/notebooks/: image_to_text.ipynb  read_mails.ipynb
src/receipt_extractor/services/: extractor.py
