[project]
name = "receipt-extractor"
version = "0.1.0"
description = "An extractor and classifier for photographed receipts"
authors = [
    {name = "Lukas Petersdorf",email = "l.petersdorf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
