[project]
name = "receipt-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Petersdorf",email = "l.petersdorf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers @ https://github.com/huggingface/transformers/archive/refs/heads/main.zip",
    "pillow (>=12.1.1,<13.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "torchaudio (>=2.10.0,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"
pre-commit = "^4.5.1"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu-src"}
torchvision = {source = "pytorch-gpu-src"}
torchaudio = {source = "pytorch-gpu-src"}
